--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tienda - Cámara Bombillo</title>
+  <title>Tienda-Creativa</title>
   <style>
     html {
       scroll-behavior: smooth;
@@ -247,3 +247,4 @@
 
 </body>
 </html>
+
